# modules/apps/headless/headless-form/headless-form-impl/rest-openapi.yaml
@@ -658,6 +658,10 @@ paths:
                   name: pageSize
                   schema:
                       type: integer
+                - in: query
+                  name: sort
+                  schema:
+                      type: string
             responses:
                 200:
                     content:
